--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,11 +2,9 @@ fastapi
 uvicorn
 pymongo
 dotenv
+python-dotenv   
 drive
-typing
 pydantic
-socket
-smtplib
 google_auth_oauthlib
 google-api-python-client
 google
